-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
1
-
581e39b35 (dev), fd608b6a6 (6.9), 1b5d77d99 (tqtc/lts-6.8)
-
Foundation Sprint 129
Currently compiling Qt for Windows fails if highdpiscaling-feature is disabled.
- clones
-
QTBUG-135890 Allow configuring Windows without clipboard feature
-
- Closed
-
For Gerrit Dashboard: QTBUG-135893 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
638938,6 | Allow configuring Qt without highdpiscaling on Windows | dev | qt/qtbase | Status: MERGED | +2 | 0 |
641095,3 | Allow configuring Qt without highdpiscaling on Windows | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
642133,2 | Allow configuring Qt without highdpiscaling on Windows | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |